--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Jekyll configuration
 
-name: My blog
-description: A jekyll theme
+name: 海阔天空
+description: Please tell me something
 
 # url is currently only used only for the RSS feed in feed.xml
 url: http://ywendy.github.io
